--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ button {
 }
 
 .name-position-container {
-  padding: 32px 0;
+  padding: 32px 0 8px 0;
 }
 
 .our-team-item {
@@ -318,6 +318,32 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+}
+
+.team-icon-list {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.team-icon-item {
+  display: flex;
+  height: 40px;
+  width: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.team-icon-item:hover {
+  background-color: #404bbf;
+}
+
+.team-icon {
+  fill: #f4f4fd;
 }
 
 /*--------------OUR TEAM----------*/
@@ -378,11 +404,13 @@ button {
 /*-------------FOOOTER----------*/
 .footer {
   background-color: #2e2f42;
-}
-
-.footer {
   padding-bottom: 100px;
   padding-top: 100px;
+}
+
+.footer-container {
+  display: flex;
+  gap: 120px;
 }
 
 .footer-logo {
@@ -407,6 +435,38 @@ button {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-icon-txt {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-icon-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-icon-item {
+  display: flex;
+  height: 40px;
+  width: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-icon-item:hover {
+  background-color: #31d0aa;
+}
+
+.footer-icon {
+  fill: #f4f4fd;
 }
 
 /*-------------FOOOTER----------*/
