--- a/css/styles.css
+++ b/css/styles.css
@@ -219,15 +219,22 @@ button {
 }
 
 .about-us-icon-item {
+  display: flex;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
   height: 112px;
   background-color: #f4f4fd;
+  width: calc((100% - 72px) / 4);
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
-  margin: 24px 100px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .about-us-list {
@@ -449,6 +456,7 @@ button {
 .footer-icon-list {
   display: flex;
   gap: 16px;
+  max-width: 208px;
 }
 
 .footer-icon-item {
