add paddings overlay-container

--- a/css/styles.css
+++ b/css/styles.css
@@ -426,6 +426,7 @@ button {
   left: 0;
   top: 0;
   transform: translateX(100%);
+  padding: 40px 32px;
 }
 
 .portfolio-overlay:hover .overlay-container {
