--- a/css/styles.css
+++ b/css/styles.css
@@ -155,8 +155,7 @@ button {
     url(../images/hero-img.jpg);
   background-repeat: no-repeat;
   background-position: center center;
-  /* background-size: cover;
-  max-width: 1440px; */
+  background-size: cover;
 }
 
 .main-hero {
@@ -235,6 +234,8 @@ button {
   width: calc((100% - 72px) / 4);
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 /* .icon {
@@ -356,9 +357,14 @@ button {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-item:hover {
+  background-color: #404bbf;
+}
+
+.team-icon-item:focus {
   background-color: #404bbf;
 }
 
@@ -398,6 +404,11 @@ button {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-txt-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -432,12 +443,13 @@ button {
   height: 100%;
   left: 0;
   top: 0;
-  transform: translateX(100%);
+  transform: translateY(100%);
   padding: 40px 32px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-overlay:hover .overlay-container {
-  transform: translateX(0);
+  transform: translateY(0);
 }
 
 .overlay-txt {
@@ -513,6 +525,7 @@ button {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-item:hover {
