--- a/css/styles.css
+++ b/css/styles.css
@@ -71,23 +71,6 @@ button {
   align-items: center;
 }
 
-.nav-item-studio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav-item-studio::after {
-  content: " ";
-  width: 48px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  position: absolute;
-  bottom: 0px;
-}
-
 .nav-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -117,12 +100,32 @@ button {
   color: #2e2f42;
 }
 
+.studio {
+  position: relative;
+  color: #404bbf;
+  transition: olor 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.studio::after {
+  content: "";
+  width: 100%;
+  background-color: #404bbf;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+}
+
 .nav-list-item {
   color: #2e2f42;
   padding: 24px 0;
   display: block;
 }
-
+.studio {
+  position: relative;
+  color: #404bbf;
+}
 .address {
   font-style: normal;
 }
@@ -138,6 +141,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*---------HEADER--------*/
@@ -156,6 +160,7 @@ button {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  max-width: 1440px;
 }
 
 .main-hero {
@@ -402,6 +407,7 @@ button {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
@@ -445,7 +451,7 @@ button {
   top: 0;
   transform: translateY(100%);
   padding: 40px 32px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-overlay:hover .overlay-container {
