--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ button {
 .studio {
   position: relative;
   color: #404bbf;
-  transition: olor 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: сolor 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio::after {
@@ -152,6 +152,7 @@ button {
   background-color: #2e2f42;
   padding-bottom: 188px;
   padding-top: 188px;
+  margin: 0 auto;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -224,32 +225,6 @@ button {
   padding-top: 120px;
 }
 
-.about-us-icon {
-  display: flex;
-  gap: 24px;
-}
-
-.about-us-icon-item {
-  display: flex;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  width: 264px;
-  height: 112px;
-  background-color: #f4f4fd;
-  width: calc((100% - 72px) / 4);
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-/* .icon {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-} */
-
 .about-us-list {
   display: flex;
   gap: 24px;
@@ -257,6 +232,16 @@ button {
 
 .about-us-list-item {
   width: calc((100% - 72px) / 4);
+}
+
+.about-us-icon-container {
+  display: flex;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 112px;
+  justify-content: center;
+  align-items: center;
 }
 
 .about-us-title {
