--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,12 @@ a {
 
 a:hover {
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a:focus {
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul,
@@ -103,7 +105,7 @@ button {
 .studio {
   position: relative;
   color: #404bbf;
-  transition: сolor 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio::after {
@@ -242,6 +244,7 @@ button {
   height: 112px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8px;
 }
 
 .about-us-title {
@@ -293,7 +296,7 @@ button {
 }
 
 .name-position-container {
-  padding: 32px 0 8px 0;
+  padding: 32px 0;
 }
 
 .our-team-item {
@@ -323,43 +326,43 @@ button {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-icon-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8px;
 }
 
 .team-icon-list-item {
-  width: calc((100% - 72px) / 4);
+  width: 40px;
+  height: 40px;
 }
 
 .team-icon-item {
   display: flex;
-  height: 40px;
-  width: 40px;
-  background-color: #4d5ae5;
-  border-radius: 50%;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-icon-item:hover {
-  background-color: #404bbf;
-}
-
-.team-icon-item:focus {
-  background-color: #404bbf;
 }
 
 .team-icon {
   fill: #f4f4fd;
+}
+
+.team-icon-list-item:hover .team-icon-item {
+  background-color: #404bbf;
+}
+
+.team-icon-list-item:focus .team-icon-item {
+  background-color: #404bbf;
 }
 
 /*--------------OUR TEAM----------*/
