--- a/css/styles.css
+++ b/css/styles.css
@@ -349,7 +349,6 @@ button {
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon {
@@ -360,7 +359,7 @@ button {
   background-color: #404bbf;
 }
 
-.team-icon-list-item:focus .team-icon-item {
+.team-icon-item:focus {
   background-color: #404bbf;
 }
 
@@ -518,7 +517,6 @@ button {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-item:hover {
