--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ button {
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
 }
 
 .footer-icon-item:hover {
